Добавил создание голосования Добавил удаление XSS Избавился от uuid в API